# linear-nets

./: .cache.sqlite  Cargo.toml  README.md  future-syntax.md  sample.line  test.line
src/: main.rs  net.rs  test.rs  util.rs
src/icombs/: encoding.rs  hvm2.rs  ivy.rs  mod.rs  net.rs
src/net/: mod.rs  rules.rs  show.rs  system.rs
src/snapshots/: linear_nets__test____home__fran__Projects__rust__linear-nets__tests__bimulticut-2.line__compilation.snap  linear_nets__test____home__fran__Projects__rust__linear-nets__tests__bimulticut-2.line__translation.snap  linear_nets__test____home__fran__Projects__rust__linear-nets__tests__bimulticut-2.line__typing.snap  linear_nets__test____home__fran__Projects__rust__linear-nets__tests__bimulticut.line__compilation.snap  linear_nets__test____home__fran__Projects__rust__linear-nets__tests__bimulticut.line__normalization.snap  linear_nets__test____home__fran__Projects__rust__linear-nets__tests__bimulticut.line__translation.snap  linear_nets__test____home__fran__Projects__rust__linear-nets__tests__cntr-function.line__compilation.snap  linear_nets__test____home__fran__Projects__rust__linear-nets__tests__cntr-function.line__translation.snap  (+44 more)
src/syntax/: compiler.rs  desugarer.rs  mod.rs  parser.rs
tests/: bimulticut-2.line  bimulticut.line  cntr-function.line  compose-functions.line  duplicate-exp.line  either-prog.line  quant-cut-elimination.line  quant-opaque-sum.line  quant-x-implies-x.line  simple.line  translate-dup-in-exp.line  translate-exp-with-context.line  translate-exp.line  weakening-allowed.line  with.line
(+2 files in other folders)
