[package]
name = "linear-nets"
version = "0.1.0"
edition = "2021"

[dependencies]
TSPL = "0.0.13"
ivy = { git = "https://github.com/VineLang/vine/", optional = true }
hvm = { git = "https://github.com/HigherOrderCo/hvm/", optional = true }

[features]
ivy = ["dep:ivy"]
hvm = ["dep:hvm"]

[dev-dependencies]
insta = "1.42.0"
glob = "0.3.2"
